# Checkers-game

./: README.md
clients/: CMakeLists.txt  player1.cpp  player2.cpp  server.cpp
clients/source/: game.cpp  game.h
